@@ -1,0 +1,52 @@
+#region License
+/*
+The MIT License (MIT)
+
+Copyright (c) 2012-2014 David Wendland
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in
+all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+THE SOFTWARE
+*/
+#endregion License
+
+using System;
+
+namespace DW.CodedUI
+{
+    /// <summary>
+    /// Represents the error if the environment is not setup properly to run CodedUI tests.
+    /// </summary>
+    public class WrongSetupException : Exception
+    {
+        /// <summary>
+        /// Initializes a new instance of the <see cref="DW.CodedUI.WrongSetupException" /> class.
+        /// </summary>
+        /// <param name="ex">The inner exception.</param>
+        public WrongSetupException(Exception ex)
+            : base(BuildMessage(), ex)
+        {
+        }
+
+        private static string BuildMessage()
+        {
+            return "Executing CodedUI Tests is not possible because at least one dll is missing or in the wrong version." + Environment.NewLine +
+                   "In the most cases its the Interop.UIAutomationClient." + Environment.NewLine + Environment.NewLine +
+                   "See inner exception for details.";
+        }
+    }
+}
